--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
+  /* overflow: hidden; */
   box-sizing: border-box;
 }
 
@@ -27,6 +27,19 @@ body {
   border-left: 1px solid #ababab;
   height: 8px;
   width: 0;
+}
+
+.full-height-container {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 104px);
+}
+
+.content {
+  flex: 1;
+  width: 100%;
+  background-color: #f5f5f5;
+  /* position: relative; */
 }
 
 /* Khi ở màn hình nhỏ (dưới 768px) */
