--- a/css/styles.css
+++ b/css/styles.css
@@ -38,19 +38,14 @@ body {
 .content {
   flex: 1;
   width: 100%;
-  background-color: #f5f5f5;
-  /* position: relative; */
+  /* background-color: #f5f5f5; */
 }
 
-/* Khi ở màn hình nhỏ (dưới 768px) */
-@media (max-width: 767.98px) {
-  .divider-nav-menu {
-    border-left: none; /* Bỏ đường viền dọc */
-    border-top: 1px solid #ababab; /* Thêm đường viền ngang */
-    width: 100%; /* Cho đường chia nằm ngang toàn bộ chiều rộng */
-    height: 1px; /* Đặt chiều cao cho đường chia ngang */
-    margin: 0.5rem 0; /* Thêm khoảng cách trên dưới nếu cần */
-  }
+.banner-text-content {
+  background-color: #2e3f55;
+  opacity: 90%;
+  width: 45%;
+  height: 45%;
 }
 
 @media (max-width: 1200px) {
@@ -64,5 +59,47 @@ body {
 
   .nav-right-menu {
     padding-right: 8px;
+  }
+
+  .banner-text-content {
+    background-color: #2e3f55;
+    opacity: 90%;
+    width: 55%;
+    height: 45%;
+  }
+}
+
+@media (max-width: 992px) {
+  .banner-text-content {
+    background-color: #2e3f55;
+    opacity: 90%;
+    width: 65%;
+    height: 45%;
+  }
+}
+
+/* Khi ở màn hình nhỏ (dưới 768px) */
+@media (max-width: 767.98px) {
+  .divider-nav-menu {
+    border-left: none; /* Bỏ đường viền dọc */
+    border-top: 1px solid #ababab; /* Thêm đường viền ngang */
+    width: 100%; /* Cho đường chia nằm ngang toàn bộ chiều rộng */
+    height: 1px; /* Đặt chiều cao cho đường chia ngang */
+    margin: 0.5rem 0; /* Thêm khoảng cách trên dưới nếu cần */
+  }
+
+  .banner-text-content {
+    background-color: #2e3f55;
+    opacity: 90%;
+    width: 100%;
+    height: 45%;
+  }
+
+  .banner-text-content-title {
+    font-size: large;
+  }
+
+  .banner-text-content-value {
+    font-size: small;
   }
 }
