--- a/css/styles.css
+++ b/css/styles.css
@@ -344,6 +344,10 @@ body {
     width: 100%;
   }
 
+  .grid-item {
+    font-size: 10px;
+  }
+
   .course-list,
   .horizontal-scroll-container {
     padding: 0 1.5rem;
@@ -359,8 +363,8 @@ body {
     margin-top: 0;
   }
 
-  .grid-item {
-    font-size: 10px;
+  .item {
+    width: 300px;
   }
 }
 
