--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,20 @@ body {
   box-orient: vertical;
 }
 
+.wrap-text {
+  width: 100%;
+  word-wrap: break-all;
+  white-space: normal;
+  margin: 0;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  line-clamp: 5;
+  box-orient: vertical;
+}
+
 .item > .more {
   font-size: 16px;
   color: #1a2d44;
@@ -245,6 +259,28 @@ body {
 
 .course-grid-container > .item {
   margin: auto;
+}
+
+.pricing-box {
+  width: 260px;
+  border: 2px solid #f5f5f5;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+
+.pricing-container {
+  margin-bottom: 50px;
+}
+
+.pricing-title {
+  max-width: 50%;
+}
+
+.pricing-options {
+  overflow-x: auto;
+  white-space: nowrap;
+  scrollbar-width: thin;
+  box-sizing: border-box;
 }
 
 @media (max-width: 1400px) {
@@ -285,6 +321,10 @@ body {
     padding: 0 100px;
     grid-template-columns: auto auto;
   }
+
+  .pricing-title {
+    max-width: 70%;
+  }
 }
 
 @media (max-width: 992px) {
@@ -318,6 +358,10 @@ body {
 
   .course-grid-container > div:nth-child(n + 4) {
     display: none;
+  }
+
+  .pricing-title {
+    max-width: 90%;
   }
 }
 
@@ -400,6 +444,10 @@ body {
 
   .course-grid-container {
     padding: 0 1.5rem;
+  }
+
+  .pricing-container {
+    margin-top: 50px;
   }
 }
 
