--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,7 @@ body {
 }
 
 .pricing-container {
-  margin-bottom: 50px;
+  margin-bottom: 150px;
 }
 
 .pricing-title {
@@ -281,6 +281,80 @@ body {
   white-space: nowrap;
   scrollbar-width: thin;
   box-sizing: border-box;
+}
+
+.questions-container {
+  padding: 0 300px;
+}
+
+.faq-item {
+  border-bottom: 1px dashed #ddd;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.faq-item .question {
+  flex: 1;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 26px 12px;
+}
+
+.faq-item .icon-circle {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #1a2d44;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #1a2d44;
+  flex-shrink: 0;
+}
+
+.faq-item .avatar-circle {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #1a2d44;
+  background-color: #f5f5f5;
+  flex-shrink: 0;
+}
+
+.faq-item .icon {
+  font-size: 20px;
+}
+
+.faq-item .answer {
+  display: none;
+  padding: 10px 0;
+  color: #333;
+  background-color: #f5f5f5;
+  padding: 26px 12px;
+}
+
+.faq-item.active .answer {
+  display: block;
+}
+
+.faq-item.active .icon::before {
+  content: "-";
+  color: orange;
+}
+
+.faq-item.active .icon-circle {
+  border: 1px solid orange;
+}
+
+.faq-item .icon::before {
+  content: "+";
+  color: #1a2d44;
 }
 
 @media (max-width: 1400px) {
@@ -313,6 +387,7 @@ body {
 
   .course-list,
   .horizontal-scroll-container,
+  .questions-container,
   .popular-course-title {
     padding: 0 100px;
   }
@@ -343,6 +418,7 @@ body {
 
   .course-list,
   .horizontal-scroll-container,
+  .questions-container,
   .popular-course-title {
     padding: 0 50px;
   }
@@ -423,6 +499,7 @@ body {
   }
 
   .course-list,
+  .questions-container,
   .horizontal-scroll-container {
     padding: 0 1.5rem;
     margin-bottom: 50px;
@@ -448,6 +525,7 @@ body {
 
   .pricing-container {
     margin-top: 50px;
+    margin-bottom: 100px;
   }
 }
 
