--- a/css/styles.css
+++ b/css/styles.css
@@ -387,7 +387,7 @@ body {
   gap: 1.5rem;
 }
 
-.logged-container {
+.logined-container {
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
@@ -396,7 +396,17 @@ body {
 
 .scale-text {
   margin: 0;
-  font-size: clamp(3px, 0.7vw, 24px) !important;
+  font-size: clamp(8px, 0.7vw, 24px) !important;
+
+  display: block;
+  padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
+  font-weight: var(--bs-nav-link-font-weight);
+  color: var(--bs-nav-link-color);
+  text-decoration: none;
+  background: 0 0;
+  border: 0;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out;
 }
 
 .dropdown-menu[data-bs-popper] {
@@ -427,7 +437,7 @@ body {
   }
 
   .nav-right-menu {
-    padding-right: 8px;
+    padding-right: 0px;
   }
 
   .banner-text-content {
@@ -518,6 +528,33 @@ body {
   .nav-list-item {
     width: 100%;
   }
+
+  .logined-container {
+    flex-direction: column-reverse;
+    width: 100%;
+  }
+
+  .logined-item {
+    width: 100%;
+  }
+
+  .notification-icon {
+    display: none;
+  }
+
+  .course-info-nav {
+    background-color: #f5f6f8;
+    padding: 1.5rem;
+  }
+
+  .user-info-nav {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .scale-text {
+    font-size: clamp(12px, 0.7vw, 24px) !important;
+  }
 }
 
 /* Khi ở màn hình nhỏ (dưới 768px) */
@@ -530,7 +567,7 @@ body {
     margin: 0.5rem 0; /* Thêm khoảng cách trên dưới nếu cần */
   }
 
-  .offcanvas.offcanvas-start {
+  .offcanvas-lg.offcanvas-start {
     width: 320px !important;
   }
 
