--- a/css/styles.css
+++ b/css/styles.css
@@ -27,13 +27,13 @@ body {
   border: 2px solid #1a2d44 !important;
 }
 
-.sign-up-button {
+.sign-in-button {
   padding-left: 24px !important;
   padding-right: 24px !important;
   background-color: #1a2d44 !important;
 }
 
-.sign-up-button:hover {
+.sign-in-button:hover {
   color: #1a2d44;
   background-color: #fcb900 !important;
 }
